--- a/Windows/AddEmployeeWindow.xaml
+++ b/Windows/AddEmployeeWindow.xaml
@@ -79,7 +79,7 @@
                    Margin="0,0,20,0"
                    FontSize="16"/>
         <TextBlock Grid.Row="7"
-                   Text="Логин"
+                   Text="Дата рождения"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Right"
                    Margin="0,0,20,0"
@@ -157,15 +157,14 @@
                  VerticalContentAlignment="Center"
                  FontSize="16"
                  MaxLength="12"/>
-        <TextBox x:Name="txtLogin"
+        <DatePicker x:Name="dpBirthday"
                  Width="240"
                  Grid.Column="1"
                  Grid.Row="7"
                  VerticalAlignment="Center"
                  HorizontalAlignment="Center"
                  VerticalContentAlignment="Center"
-                 FontSize="16"
-                 MaxLength="50"/>
+                 FontSize="16"/>
         <PasswordBox x:Name="txtPassword"
                  Width="240"
                  Grid.Column="1"
