--- a/Windows/AddEmployeeWindow.xaml
+++ b/Windows/AddEmployeeWindow.xaml
@@ -26,8 +26,6 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
 
@@ -85,24 +83,12 @@
                    Margin="0,0,20,0"
                    FontSize="16"/>
         <TextBlock Grid.Row="8"
-                   Text="Пароль"
+                   Text="Паспорт"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Right"
                    Margin="0,0,20,0"
                    FontSize="16"/>
-        <TextBlock Grid.Row="9"
-                   Text="Повтор пароля"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Right"
-                   Margin="0,0,20,0"
-                   FontSize="16"/>
-        <TextBlock Grid.Row="10"
-                   Text="Роль"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Right"
-                   Margin="0,0,20,0"
-                   FontSize="16"/>
-        
+
         <!-- Правая часть -->
         <TextBox x:Name="txtLname"
                  Width="240"
@@ -165,7 +151,7 @@
                  HorizontalAlignment="Center"
                  VerticalContentAlignment="Center"
                  FontSize="16"/>
-        <PasswordBox x:Name="txtPassword"
+        <TextBox x:Name="txtPassport"
                  Width="240"
                  Grid.Column="1"
                  Grid.Row="8"
@@ -174,25 +160,8 @@
                  VerticalContentAlignment="Center"
                  FontSize="16"
                  MaxLength="50"/>
-        <PasswordBox x:Name="txtPasswordRepeat"
-                 Width="240"
-                 Grid.Column="1"
-                 Grid.Row="9"
-                 VerticalAlignment="Center"
-                 HorizontalAlignment="Center"
-                 VerticalContentAlignment="Center"
-                 FontSize="16"
-                 MaxLength="50"/>
-        <ComboBox x:Name="cmbRole"
-                 Width="240"
-                 Grid.Column="1"
-                 Grid.Row="10"
-                 VerticalAlignment="Center"
-                 HorizontalAlignment="Center"
-                 VerticalContentAlignment="Center"
-                 FontSize="16"/>
         <Button x:Name="btnAddNew"
-                Grid.Row="11"
+                Grid.Row="9"
                 Grid.ColumnSpan="2"
                 Width="120"
                 Height="30"
